name:                ph-website
version:             1.0.0
synopsis:            ph Website
-- description:         
homepage:            https://ph.github.io/
license:             MIT
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2014 Ricky Elrod
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

executable ph-website
  main-is: site.hs
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.6 && <5
    , hakyll >= 4.4.2.0
    , pandoc >= 1.12.2.1
    , time >= 1.4
    , transformers >= 0.3
  default-language: Haskell2010

test-suite hlint
  main-is: hlint.hs
  type: exitcode-stdio-1.0
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , hlint >= 1.7
